--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -179,4 +179,18 @@
         <item name="colorControlActivated">@color/powerBuyOrange</item>
 
     </style>
+
+    <!-- Button -->
+    <style name="Button" parent="Base.Widget.AppCompat.Button">
+        <item name="android:padding">16dp</item>
+        <item name="android:minHeight">36dp</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="Button.Primary" parent="Base.Widget.AppCompat.Button.Borderless">
+        <item name="android:background">@drawable/btn_primary</item>
+        <item name="android:textColor">@color/powerBuyWhite</item>
+        <item name="elevation">4dp</item>
+    </style>
+
 </resources>
