--- a/app/src/main/res/layout/fragment_product_free_item.xml
+++ b/app/src/main/res/layout/fragment_product_free_item.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="200dp">
+    android:layout_height="wrap_content"
+    android:padding="16dp">
 
     <TextView
         android:id="@+id/tvFreebieNotFound"
         android:layout_width="0dp"
         style="@style/Base.TextAppearance.AppCompat.Medium"
-        android:layout_height="wrap_content"
+        android:layout_height="200dp"
         android:gravity="center"
         android:text="@string/freebie_promotion_not_found"
         app:layout_constraintBottom_toBottomOf="parent"
