--- a/app/src/main/res/layout/list_item_delivery_options.xml
+++ b/app/src/main/res/layout/list_item_delivery_options.xml
@@ -42,9 +42,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:background="@color/colorPrimary"
         android:padding="16dp"
         android:text="@string/choose"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/tv_carrier_title"
         app:layout_constraintTop_toTopOf="parent" />
