--- a/app/src/main/res/layout/list_item_delivery_options.xml
+++ b/app/src/main/res/layout/list_item_delivery_options.xml
@@ -42,26 +42,28 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="16dp"
         android:padding="16dp"
         android:text="@string/choose"
         android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/tv_carrier_title"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toTopOf="@id/tv_amount" />
 
     <cenergy.central.com.pwb_store.view.PowerBuyTextView
         android:id="@+id/tv_amount"
         style="@style/TextAppearance.AppCompat.Large"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="16dp"
         android:gravity="end"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/guild_line_50"
-        app:layout_constraintTop_toBottomOf="@+id/choose_delivery_option"
+        app:layout_constraintBottom_toTopOf="@id/option_line"
         tools:text="amount" />
 
     <TextView
@@ -79,8 +81,8 @@
         android:id="@+id/option_line"
         android:layout_width="0dp"
         android:layout_height="1dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="64dp"
         android:background="@color/graySelect"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_amount" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_method_title"/>
 </android.support.constraint.ConstraintLayout>
