EO-47 Fixed - Search Product on PDP page sporadically show 'Product can't be found'

--- a/app/src/main/res/layout/list_item_search.xml
+++ b/app/src/main/res/layout/list_item_search.xml
@@ -87,6 +87,7 @@
         android:imeOptions="actionSearch"
         android:inputType="textFilter"
         android:maxLines="1"
+        android:textCursorDrawable="@drawable/cursor_orange"
         android:textAllCaps="true"
         android:textColor="@color/headerTextColor"
         android:textColorHint="@color/hintColor"
