--- a/app/src/main/res/layout/list_item_shopping_cart.xml
+++ b/app/src/main/res/layout/list_item_shopping_cart.xml
@@ -137,7 +137,7 @@
         android:layout_marginTop="14dp"
         android:text="@string/add_over_qty"
         android:textColor="@color/dangerColor"
-        android:visibility="invisible"
+        android:visibility="gone"
         app:layout_constraintStart_toEndOf="@id/qty_list_shopping_cart"
         app:layout_constraintTop_toBottomOf="@id/price_list_shopping_cart" />
 
