--- a/app/src/main/res/layout/fragment_payment_billing.xml
+++ b/app/src/main/res/layout/fragment_payment_billing.xml
@@ -131,7 +131,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="16dp"
                     android:layout_weight="1"
-                    app:header="@string/house_on"
+                    app:header="@string/house_no"
                     app:required="true" />
 
                 <cenergy.central.com.pwb_store.view.PowerBuyEditTextBorder
@@ -371,7 +371,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="16dp"
                     android:layout_weight="1"
-                    app:header="@string/house_on"
+                    app:header="@string/house_no"
                     app:required="true" />
 
                 <cenergy.central.com.pwb_store.view.PowerBuyEditTextBorder
