--- a/app/src/main/res/layout/item_list_order_product.xml
+++ b/app/src/main/res/layout/item_list_order_product.xml
@@ -27,14 +27,37 @@
             android:padding="8dp"
             tools:src="@drawable/ic_pwb_logo_detail" />
 
-        <cenergy.central.com.pwb_store.view.PowerBuyTextView
-            android:id="@+id/product_name_list_order"
-            style="@style/TextAppearance.AppCompat.Medium"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:textColor="@color/blackText"
-            tools:text="@string/app_name" />
+            android:orientation="vertical">
+
+            <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                android:id="@+id/tvTitleFreebie"
+                style="@style/descriptionProduct"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:layout_marginStart="16dp"
+                android:background="@color/powerBuyPurple"
+                android:ellipsize="end"
+                android:maxLines="2"
+                android:paddingEnd="8dp"
+                android:paddingStart="8dp"
+                android:textColor="@color/powerBuyWhite"
+                android:visibility="gone"
+                android:textSize="20sp"
+                android:text="@string/title_free_item" />
+
+            <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                android:id="@+id/product_name_list_order"
+                style="@style/TextAppearance.AppCompat.Medium"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:textColor="@color/blackText"
+                tools:text="@string/app_name" />
+        </LinearLayout>
 
     </LinearLayout>
 
@@ -56,7 +79,8 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"        android:textColor="@color/blackText"
+        android:layout_marginEnd="8dp"
+        android:textColor="@color/blackText"
         tools:text="@string/qty" />
 
     <cenergy.central.com.pwb_store.view.PowerBuyTextView
@@ -66,7 +90,8 @@
         android:layout_height="wrap_content"
         android:layout_weight="2"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"        android:textColor="@color/blackText"
+        android:layout_marginEnd="8dp"
+        android:textColor="@color/blackText"
         android:textStyle="bold"
         tools:text="@string/total" />
 </LinearLayout>
