--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -30,6 +30,13 @@
             android:layout_gravity="center"
             android:src="@mipmap/ic_logo"/>
 
+        <cenergy.central.com.pwb_store.view.LanguageButton
+            android:id="@+id/switch_language_button"
+            android:layout_width="96dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:layout_margin="8dp" />
+
     </android.support.v7.widget.Toolbar>
 
 </android.support.design.widget.AppBarLayout>
