--- a/app/src/main/res/layout/activity_shopping_cart.xml
+++ b/app/src/main/res/layout/activity_shopping_cart.xml
@@ -54,21 +54,23 @@
 
             <LinearLayout
                 android:id="@+id/layout_total_shopping_cart"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:layout_marginEnd="16dp"
                 android:orientation="horizontal"
-                app:layout_constraintBottom_toTopOf="@+id/layout_button_shopping_cart"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="16dp"
+                android:gravity="end"
+                android:padding="8dp"
+                app:layout_constraintStart_toEndOf="@id/guideline"
+                app:layout_constraintBottom_toTopOf="@id/payment"
                 app:layout_constraintEnd_toEndOf="parent">
-
                 <cenergy.central.com.pwb_store.view.PowerBuyTextView
                     style="@style/textNameProduct"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="18sp"
                     android:text="@string/total_price" />
-
                 <cenergy.central.com.pwb_store.view.PowerBuyTextView
                     android:id="@+id/txt_total_price_shopping_cart"
                     style="@style/textNameProduct"
@@ -80,90 +82,123 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/layout_button_shopping_cart"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="8dp"
                 android:layout_marginBottom="16dp"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
+                android:gravity="center"
+                android:padding="8dp"
+                android:background="@color/lightGray"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent">
-
-                <android.support.v7.widget.CardView
-                    android:id="@+id/back_to_shop"
-                    style="@style/RaisedButtonCard"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="8dp"
-                    android:layout_weight="0.5"
-                    android:foreground="?android:attr/selectableItemBackground"
-                    app:cardBackgroundColor="@color/categoryColor">
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                        <ImageView
-                            android:id="@+id/img_icon"
-                            android:layout_width="24dp"
-                            android:layout_height="24dp"
-                            android:layout_alignParentStart="true"
-                            android:layout_centerVertical="true"
-                            android:layout_marginStart="6dp"
-                            android:contentDescription="@string/product_available"
-                            android:src="@drawable/ic_back" />
-
-                        <cenergy.central.com.pwb_store.view.PowerBuyTextView
-                            style="@style/RaisedButton"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="@string/shopping"
-                            android:textColor="@android:color/white"
-                            android:textSize="14sp"
-                            app:typeFaceAsset="RobotoLight.ttf" />
-
-                    </RelativeLayout>
-
-                </android.support.v7.widget.CardView>
-
-                <android.support.v7.widget.CardView
-                    android:id="@+id/payment"
-                    style="@style/RaisedButtonCard"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                app:layout_constraintBottom_toTopOf="@id/back_to_shop"
+                app:layout_constraintEnd_toStartOf="@id/guideline">
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
                     android:layout_marginStart="8dp"
-                    android:layout_weight="0.5"
-                    android:foreground="?android:attr/selectableItemBackground"
-                    app:cardBackgroundColor="@color/hintColor">
+                    android:src="@drawable/ic_the1"
+                    android:contentDescription="@string/app_name" />
 
-                    <LinearLayout
+                <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                    android:id="@+id/txt_t1_shopping_cart"
+                    style="@style/textNameProduct"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:textSize="14sp" />
+            </LinearLayout>
+
+            <android.support.v7.widget.CardView
+                android:id="@+id/back_to_shop"
+                style="@style/RaisedButtonCard"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:layout_weight="0.5"
+                android:layout_marginStart="16dp"
+                android:layout_marginBottom="16dp"
+                android:foreground="?android:attr/selectableItemBackground"
+                app:cardBackgroundColor="@color/categoryColor"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@id/guideline">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <ImageView
+                        android:id="@+id/img_icon"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:layout_alignParentStart="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="6dp"
+                        android:contentDescription="@string/product_available"
+                        android:src="@drawable/ic_back" />
+
+                    <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                        style="@style/RaisedButton"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/shopping"
+                        android:textColor="@android:color/white"
+                        android:textSize="14sp"
+                        app:typeFaceAsset="RobotoLight.ttf" />
+
+                </RelativeLayout>
+
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:id="@+id/payment"
+                style="@style/RaisedButtonCard"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_weight="0.5"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="16dp"
+                android:foreground="?android:attr/selectableItemBackground"
+                app:cardBackgroundColor="@color/hintColor"
+                app:layout_constraintStart_toEndOf="@id/guideline"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:layout_gravity="center_vertical"
+                        android:contentDescription="@string/product_compare"
+                        android:src="@drawable/ic_check" />
+
+                    <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                        style="@style/RaisedButton"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:orientation="horizontal">
+                        android:text="@string/payment_header"
+                        android:textColor="@android:color/white"
+                        android:textSize="14sp"
+                        app:typeFaceAsset="RobotoLight.ttf" />
 
-                        <ImageView
-                            android:layout_width="24dp"
-                            android:layout_height="24dp"
-                            android:layout_gravity="center_vertical"
-                            android:contentDescription="@string/product_compare"
-                            android:src="@drawable/ic_check" />
+                </LinearLayout>
 
-                        <cenergy.central.com.pwb_store.view.PowerBuyTextView
-                            style="@style/RaisedButton"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/payment_header"
-                            android:textColor="@android:color/white"
-                            android:textSize="14sp"
-                            app:typeFaceAsset="RobotoLight.ttf" />
+            </android.support.v7.widget.CardView>
 
-                    </LinearLayout>
-
-                </android.support.v7.widget.CardView>
-
-            </LinearLayout>
+            <android.support.constraint.Guideline
+                android:id="@+id/guideline"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.5"/>
 
         </android.support.constraint.ConstraintLayout>
 
