--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -34,7 +34,7 @@
             android:id="@+id/switch_language_button"
             android:layout_width="96dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="end"
+            android:layout_gravity="end|center_vertical"
             android:layout_margin="8dp" />
 
     </android.support.v7.widget.Toolbar>
