--- a/app/src/main/res/layout/list_item_shopping_cart.xml
+++ b/app/src/main/res/layout/list_item_shopping_cart.xml
@@ -32,7 +32,7 @@
         android:ellipsize="end"
         android:maxLines="2"
         android:textSize="20sp"
-        app:layout_constraintEnd_toStartOf="@+id/deleteItemImageView"
+        app:layout_constraintEnd_toStartOf="@+id/deleteItemTextView"
         app:layout_constraintStart_toEndOf="@+id/product_image_list_shopping_cart"
         app:layout_constraintTop_toBottomOf="@+id/tvTitleFreebie"
         tools:text="Product Name" />
@@ -57,7 +57,7 @@
         android:text="@string/title_free_item" />
 
     <TextView
-        android:id="@+id/deleteItemImageView"
+        android:id="@+id/deleteItemTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
